# libdrm-ocaml

./: LICENSE.md  Makefile  README.md  default.nix  dune-project  flake.nix  libdrm.opam  libdrm.opam.template
examples/: atomic.ml  dune  nonatomic.ml  query.ml  resources.ml  test_image.ml  utils.ml
lib/: buffer.ml  buffer.mli  cap.ml  cap.mli  client_cap.ml  client_cap.mli  convert.py  dev_t.ml  dev_t.mli  device.ml  device.mli  dmabuf.ml  dmabuf.mli  drm.ml  drm.mli  dune  err.ml  fourcc.ml  fourcc.mli  function_description.ml  id.ml  id.mli  kms.ml  kms.mli  modifier.ml  modifier.mli  stubs.c  type_description.ml
lib/config/: discover.ml
test/: dune  test.ml
